--- a/_posts/2018-03-22-Unity3D-井字棋.md
+++ b/_posts/2018-03-22-Unity3D-井字棋.md
@@ -4,3 +4,22 @@ date: 2018-03-22 23:00:04
 categories:
 - Unity
 ---
+
+Unity第一个小游戏。
+
+>游戏内容： 井字棋 或 贷款计算器 或 简单计算器 等等  
+技术限制： 仅允许使用 IMGUI 构建 UI
+
+Preparaiton:
+1. 将脚本代码挂载到场景中唯一的对象Camera上才能Enable脚本。  
+2. OnGUI()函数在每一帧都会被调用一次。
+
+主要用到如下三个函数
+```c
+//Make a text or texture label on screen.
+public static void Label(Rect position, string text);
+//A 2D Rectangle defined by X and Y position, width and height.
+public Rect(float x, float y, float width, float height);
+//A standard button that can be clicked in order to trigger an event.
+public static void Button(Rect position, string text);
+```
