--- a/_posts/2018-03-22-Unity3D-井字棋.md
+++ b/_posts/2018-03-22-Unity3D-井字棋.md
@@ -7,6 +7,7 @@ categories:
 
 Unity第一个小游戏。
 
+## 简述
 >游戏内容： 井字棋 或 贷款计算器 或 简单计算器 等等  
 技术限制： 仅允许使用 IMGUI 构建 UI
 
@@ -23,3 +24,7 @@ public Rect(float x, float y, float width, float height);
 //A standard button that can be clicked in order to trigger an event.
 public static void Button(Rect position, string text);
 ```
+
+## 实现
+### 实例化棋盘
+### 判断输赢
