--- a/_posts/2018-03-22-Unity3D-井字棋.md
+++ b/_posts/2018-03-22-Unity3D-井字棋.md
@@ -11,6 +11,8 @@ Unity第一个小游戏。
 >游戏内容： 井字棋 或 贷款计算器 或 简单计算器 等等  
 技术限制： 仅允许使用 IMGUI 构建 UI
 
+思路：使用GUI.Button动态实例化一个3*3的棋盘，用一个3*3的数组记录每一个格子的状态，并在每一次调用时候
+
 Preparaiton:
 1. 将脚本代码挂载到场景中唯一的对象Camera上才能Enable脚本。  
 2. OnGUI()函数在每一帧都会被调用一次。
@@ -27,4 +29,74 @@ public static void Button(Rect position, string text);
 
 ## 实现
 ### 实例化棋盘
+```c
+ //create chessboard eveytime OnGUI() called
+        for (int i = 0; i < 3; i++) {
+            for(int j = 0;j < 3; j++) {
+                if (chessboard[i, j] == -1)
+                    GUI.Button(new Rect(marginX + i * width, marginY + j * hight, width, hight), "O");
+                else if (chessboard[i, j] == 1)
+                    GUI.Button(new Rect(marginX + i * width, marginY + j * hight, width, hight), "X");
+//if click event occur;
+                if(GUI.Button(new Rect(marginX + i * width, marginY + j * hight, width, hight), "")) {
+                    Debug.Log("Click on Button");
+                    if (gameOn == 1) {
+                        Debug.Log(curPlayer);
+                        chessboard[i, j] = curPlayer;
+                        curPlayer = -curPlayer;
+                    }
+                }
+            }
+        }
+```
 ### 判断输赢
+OnGUI()调用，判断当前棋盘是否有赢家，从而确定参数gameOn和显示的文字
+```c
+    private int Judge()
+    {
+        //determine if win in a row
+        for(int i = 0; i < 3; i++)
+        {
+            if (chessboard[i, 0] != 0
+                && chessboard[i, 0] == chessboard[i, 1]
+                && chessboard[i, 1] == chessboard[i, 2])
+            {
+                gameOn = 0;
+                return chessboard[i, 0];
+            }
+        }
+        //determine if win in a column
+        for(int i = 0; i < 3; i++)
+        {
+            if (chessboard[0, i] != 0
+                && chessboard[0, i] == chessboard[1, i]
+                && chessboard[1, i] == chessboard[2, i])
+            {
+                gameOn = 0;
+                return chessboard[0, i];
+            }
+        }
+        //determine if win in diagonal line
+        if ((chessboard[0, 0] != 0 && chessboard[0, 0] == chessboard[2, 2] && chessboard[2, 2] == chessboard[1, 1])
+            || (chessboard[0, 2] != 0 && chessboard[1, 1] == chessboard[0, 2] && chessboard[0, 2] == chessboard[2, 0]))
+        {
+            gameOn = 0;
+            return chessboard[1, 1];
+        }
+            return 0;
+    }
+```
+### 重置游戏
+恢复游戏状态为初始态
+```c
+    private void Reset()
+    {
+        Debug.Log("Reset");
+        curPlayer = 1;
+        gameOn = 1;
+        for (int i = 0; i < 3; i++)
+            for (int j = 0; j < 3; j++)
+                chessboard[i, j] = 0;
+    }
+``` 
+## Q&A
