--- a/_posts/2018-03-21-Unity-简答.md
+++ b/_posts/2018-03-21-Unity-简答.md
@@ -93,9 +93,12 @@ categories:
         
 - 描述下图中table对象（实体）的属性、table的Transform的属性、table的部件
     ![homework](http://i4.bvimg.com/618639/cfdf0bac98e96a13.jpg)
-    - 属性：
-    - Transform属性：Position, Rotation, Scale
-    - 部件：Transform, Mesh Filter,Box Collider, Mesh Renderer
+    - activeSelf：可以通过取消勾选或者将属性改为inactive来将此对象暂时从场景中失效。
+    - 部件：Transform
+        - Transform属性：Position, Rotation, Scale，决定对象的位置，旋转和大小。
+        - Mesh Filter 网格过滤器：从资源中获取一个网格
+        - Box Collider 盒撞机
+        - Mesh Renderer 网格渲染器：从过滤期中提取一个网格并渲染。
 - 用UML图描述三者的关系
     一个对象拥有若干个Component的实例，Component有若干MonoBehavior的行为
         ![UML](http://i4.bvimg.com/618639/61c6d17c52b032d0.jpg)
@@ -146,6 +149,37 @@ foreach（Transform t in transform）｛
 - 预设与对象克隆 (clone or copy or Instantiate of Unity Object) 关系？
     -  对象克隆是创建了一个和原有对象相同的对象，但新对象和原有对象没有直接关系，修改其中一个另一个并不会被修改。
 - 制作 table 预制，写一段代码将 table 预制资源实例化成游戏对象
+```c
+public class prefab1 : MonoBehaviour {
 
-**尝试解释组合模式(Composite Pattern / 一种设计模式)。使用BroadcastMessage()方法**
-- 向子对象发送消息
+    public Transform prefab;
+    void Start () {
+        for (int i = 0; i < 4; ++i)
+        {
+            Instantiate(prefab, new Vector3(i * 5.5f, 1, 0), Quaternion.identity);
+        }
+    }
+}
+```
+**尝试解释组合模式(Composite Pattern / 一种设计模式)**
+组合模式，也叫合成模式、树模式，指的是将对象以树形结构组织起来，达成"部分-整体"的层次结构，使得客户端对单个对象和组合对象的使用具有一致性。
+- 使用[BroadcastMessage()](https://docs.unity3d.com/ScriptReference/Component.BroadcastMessage.html)方法向子对象发送消息
+Description : Calls the method named methodName on every MonoBehaviour in this game object or any of its children. 
+```c
+public void BroadcastMessage(string methodName, object parameter = null, SendMessageOptions options = SendMessageOptions.RequireReceiver);
+public void BroadcastMessage(string methodName, SendMessageOptions options);
+```
+
+```c
+using UnityEngine;
+using System.Collections;
+
+public class ExampleClass : MonoBehaviour {
+    void ApplyDamage(float damage) {
+        print(damage);
+    }
+    void Example() {
+        BroadcastMessage("ApplyDamage", 5.0F);
+    }
+}
+```
