--- a/_posts/2018-03-21-Unity-简答.md
+++ b/_posts/2018-03-21-Unity-简答.md
@@ -7,7 +7,7 @@ categories:
 
 基本概念部分。
 
-#简答
+#简答  
 **解释游戏对象(GameObjects)和资源(Assets)的区别和联系**
 - 区别：
     - 游戏对象(GameObject)是场景中的所有实体的基类，可以视为一个空的容器。当以GameObject为父类的继承中添加子类特有的属性之后，就构成了在游戏中看到的形态和行为各异的角色和场景了。每个游戏对象实例都在游戏对象森林（Hierarchy）中有自己的位置。
@@ -79,11 +79,11 @@ categories:
 |Awake|当一个脚本实例被载入时(when script object is initialised)调用|  
 |Start|在所有Update函数之前被调用一次(when a script is enabled)|  
 |Update|当行为启用时，其Update在每一帧被调用| 
-|FixedUpdate|当行为启用时，其FixedUpdate在每一**时间片**被调用|  
+|FixedUpdate|当行为启用时，其FixedUpdate在每一时间片被调用|  
 |LateUpdate|当行为启用时，在每一帧的Update函数之后执行|  
 |OnGUI|用于渲染和处理GUI时间，一帧可能调用许多次，可以视为一帧调用一次|  
 |OnDisable|行为失效或者对象销毁时调用|  
-|OnEnable|对象使能时候调用|  
+|OnEnable|对象使能时候调用| 
 
 **查找脚本手册，了解GameObject，Transform，Conponent对象**
 - 分别翻译官方对三个对象的描述(Description)  
@@ -183,3 +183,5 @@ public class ExampleClass : MonoBehaviour {
     }
 }
 ```
+
+<!-- For more information, please visit [](https://github.com/WuYuQi0301/Unity-TicTacToe/tree/master) -->
