space and action

--- a/_posts/2018-03-29-Unity-空间与运动-简答.md
+++ b/_posts/2018-03-29-Unity-空间与运动-简答.md
@@ -1,18 +1,14 @@
 ---
-title: Unity 空间与运动
+title: Unity 空间与运动 简答
 date: 2018-03-29 10:10:04
 categories:
 - Unity
 ---
 
-# Homework - Short Answers
+Short answers 
 
 1. **游戏对象运动的本质是什么？**
 > 本质是坐标和旋转角度随着时间变换
 2. **请用三种方法以上方法，实现物体的抛物线运动。（如，修改Transform属性，使用向量Vector3的方法…）**
 3. **写一个程序，实现一个完整的太阳系，其他星球围绕太阳的转速必须不一样，且不在一个法平面上。**
 
-# Concepts & Notes
-1. 世界坐标 v.s 对象坐标
-> 世界坐标
-2. 
