space and motion

--- a/_posts/2018-03-29-Unity-空间与运动-简答.md
+++ b/_posts/2018-03-29-Unity-空间与运动-简答.md
@@ -7,8 +7,36 @@ categories:
 
 Short answers 
 
-1. **游戏对象运动的本质是什么？**
-> 本质是坐标和旋转角度随着时间变换
-2. **请用三种方法以上方法，实现物体的抛物线运动。（如，修改Transform属性，使用向量Vector3的方法…）**
-3. **写一个程序，实现一个完整的太阳系，其他星球围绕太阳的转速必须不一样，且不在一个法平面上。**
+# Short answers 
+
+## 游戏对象运动的本质
+> 本质是坐标和旋转角度随着时间变换。私以为视游戏对象为物理的质点的话比例不算是对象的运动。
+
+## 实现物体的抛物线运动
+*Hint: 修改Transform属性，使用向量Vector3的方法…）*
+抛物线运动关键在于x方向上是时间的一次函数，y方向上为时间的二次函数。
+### Method1 transform.positon  
+注意Time.deltaTime为上一帧到当前帧的时间间隔，Time.fixedTime为游戏开始到当前帧的时间间隔。[Time属性详解](https://www.cnblogs.com/caymanlu/p/6361675.html)
+```c
+    void Update () {
+        float time = Time.fixedTime / 10;
+        //x^2 = 2py
+        this.transform.position += Vector3.right * time ; 
+        this.transform.position += Vector3.up * time * time ;
+    }
+```
+### Method2 Vector3
+每一帧都赋予一个新的向量
+```c
+    void Update () {
+        float time = Time.fixedTime;
+        Debug.Log(time);
+        this.transform.position = new Vector3(time, time * time, 0); 
+    }
+```
+### Method3
+```c
+```
+##实现一个完整的太阳系，
+*其他星球围绕太阳的转速必须不一样，且不在一个法平面上.*
 
