--- a/_posts/2018-03-29-Unity-空间与运动-详解.md
+++ b/_posts/2018-03-29-Unity-空间与运动-详解.md
@@ -24,7 +24,7 @@ this.transform.position += Vector3.left * Time.deltatime;
     + e.g (0, 45, 0) 按左手法则沿y轴旋转45
 绝对：position, eulerAngles, scale, rotation
 相对：localposition, local
-相对位置 up, right. forward
+相对位置 up, right, forward
 空间依赖 parent, childCount
 
 # Transform - 方法
@@ -112,3 +112,25 @@ Vector3
         // Dampen towards the target rotation
         transform.rotation = Quaternion.Slerp(transform.rotation, target,  Time.deltaTime * smooth);
         ```
+
+# Time
+|captureFramerate|Slows game playback time to allow screenshots to be saved between frames.
+|deltaTime|The time in seconds it took to complete the last frame (Read Only).
+|fixedDeltaTime|The interval in seconds at which physics and other fixed frame rate updates (like MonoBehaviour's FixedUpdate) are performed.
+|fixedTime|   The time the latest FixedUpdate has started (Read Only). This is the time in seconds since the start of the game.
+|fixedUnscaledDeltaTime|  The timeScale-independent interval in seconds from the last fixed frame to the current one (Read Only).
+|fixedUnscaledTime|   The TimeScale-independant time the latest FixedUpdate has started (Read Only). This is the time in seconds since the start of the game.
+|frameCount|  The total number of frames that have passed (Read Only).
+inFixedTimeStep Returns true if called inside a fixed time step callback (like MonoBehaviour's FixedUpdate), otherwise returns false.
+|maximumDeltaTime|    The maximum time a frame can take. Physics and other fixed frame rate updates (like MonoBehaviour's FixedUpdate).
+|maximumParticleDeltaTime|    The maximum time a frame can spend on particle updates. If the frame takes longer than this, then updates are split into multiple smaller updates.
+|realtimeSinceStartup|    The real time in seconds since the game started (Read Only).
+|smoothDeltaTime| A smoothed out Time.deltaTime (Read Only).
+time    The time at the beginning of this frame (Read Only). This is the time in seconds since the start of the game.
+|timeScale|   The scale at which the time is passing. This can be used for slow motion effects.
+|timeSinceLevelLoad|  The time this frame has started (Read Only). This is the time in seconds since the last level has been loaded.
+|unscaledDeltaTime|   The timeScale-independent interval in seconds from the last frame to the current one (Read Only).
+|unscaledTime|    The timeScale-independant time for this frame (Read Only). This is the time in seconds since the start of the game.
+
+# References
+- [Unity&C# Time时间相关 - Eam鳄鱼泪](https://www.cnblogs.com/caymanlu/p/6361675.html)
