space and motion

--- a/_posts/2018-03-29-Unity-空间与运动-详解.md
+++ b/_posts/2018-03-29-Unity-空间与运动-详解.md
@@ -18,17 +18,18 @@ Concepts & Notes
 this.transform.position += Vector3.left * Time.deltatime;
 ```
 - 比例 scale
-- 旋转 [rotation](https://docs.unity3d.com/ScriptReference/Transform-rotation.html) 类[Quaternion](https://docs.unity3d.com/ScriptReference/Quaternion.html)的一个实例，因此有四元素(x, y, z, w)。
-    +
+- 旋转 [rotation](https://docs.unity3d.com/ScriptReference/Transform-rotation.html)   
+类[Quaternion](https://docs.unity3d.com/ScriptReference/Quaternion.html)的一个实例，因此有四元素(x, y, z, w)。
 - 欧拉角 eulerAngles 以某个轴为法向量旋转范围[0, 360)
-    + e.g (0, 45, 0) 按左手法则沿y轴旋转45
-绝对：position, eulerAngles, scale, rotation
-相对：localposition, local
-相对位置 up, right, forward
-空间依赖 parent, childCount
+    + e.g (0, 45, 0) 按左手法则沿y轴旋转45  
+绝对：position, eulerAngles, scale, rotation  
+相对：localposition, local  
+相对位置 up, right, forward  
+空间依赖 parent, childCount  
 
 # Transform - 方法
-- 平移 [Translate](https://docs.unity3d.com/ScriptReference/Transform.Translate.html) 方法的使用总共有四种参数，总的来说就是要用Vector3或者xyz指定移动的方向，以及制定平移的相对参考系是什么。
+- 平移 [Translate](https://docs.unity3d.com/ScriptReference/Transform.Translate.html)   
+方法的使用总共有四种参数，总的来说就是要用Vector3或者xyz指定移动的方向，以及制定平移的相对参考系是什么。  
 ```c
 //向参数translation的方向和距离移动
 public void Translate(Vector3 translation, Space relativeTo = Space.Self);
@@ -61,15 +62,20 @@ void Update() {
 }
 }
 ```
-- 旋转 [Rotate](https://docs.unity3d.com/ScriptReference/Vector3.html)
+
+- 旋转 [Rotate](https://docs.unity3d.com/ScriptReference/Vector3.html)  
+
 ```c
 public void Rotate(Vector3 eulerAngles, Space relativeTo = Space.Self);
 public void Rotate(float xAngle, float yAngle, float zAngle, Space relativeTo = Space.Self);
 public void Rotate(Vector3 axis, float angle, Space relativeTo = Space.Self);
 ```
-- 绕转 [RotateAround](https://docs.unity3d.com/ScriptReference/Transform.RotateAround.html)（世界坐标）
+
+- 绕转 [RotateAround](https://docs.unity3d.com/ScriptReference/Transform.RotateAround.html)（世界坐标）  
+
 ```c
-//Rotates the transform about axis passing through point in world coordinates by angle degrees.
+//Rotates the transform about axis passing through point 
+//in world coordinates by angle degrees.
 public void RotateAround(Vector3 point, Vector3 axis, float angle);
 //example
 void Update() {
@@ -78,7 +84,8 @@ void Update() {
 ```
 - 指向 [LookAt](https://docs.unity3d.com/ScriptReference/Transform.LookAt.html)
 ```c
-//Rotates the transform so the forward vector points at /target/'s current position.
+//Rotates the transform so the forward vector 
+//points at /target/'s current position.
 // This complete script can be attached to a camera to make it
 // continuously point at another object.
 public void LookAt(Transform target, Vector3 worldUp = Vector3.up);
@@ -114,23 +121,24 @@ Vector3
         ```
 
 # Time
-|captureFramerate|Slows game playback time to allow screenshots to be saved between frames.
+|static properties|description|
+|captureFramerate|Slows game playback time to allow screenshots to be saved between frames.|
 |deltaTime|The time in seconds it took to complete the last frame (Read Only).
-|fixedDeltaTime|The interval in seconds at which physics and other fixed frame rate updates (like MonoBehaviour's FixedUpdate) are performed.
-|fixedTime|   The time the latest FixedUpdate has started (Read Only). This is the time in seconds since the start of the game.
-|fixedUnscaledDeltaTime|  The timeScale-independent interval in seconds from the last fixed frame to the current one (Read Only).
-|fixedUnscaledTime|   The TimeScale-independant time the latest FixedUpdate has started (Read Only). This is the time in seconds since the start of the game.
-|frameCount|  The total number of frames that have passed (Read Only).
-inFixedTimeStep Returns true if called inside a fixed time step callback (like MonoBehaviour's FixedUpdate), otherwise returns false.
-|maximumDeltaTime|    The maximum time a frame can take. Physics and other fixed frame rate updates (like MonoBehaviour's FixedUpdate).
-|maximumParticleDeltaTime|    The maximum time a frame can spend on particle updates. If the frame takes longer than this, then updates are split into multiple smaller updates.
-|realtimeSinceStartup|    The real time in seconds since the game started (Read Only).
-|smoothDeltaTime| A smoothed out Time.deltaTime (Read Only).
-time    The time at the beginning of this frame (Read Only). This is the time in seconds since the start of the game.
-|timeScale|   The scale at which the time is passing. This can be used for slow motion effects.
-|timeSinceLevelLoad|  The time this frame has started (Read Only). This is the time in seconds since the last level has been loaded.
-|unscaledDeltaTime|   The timeScale-independent interval in seconds from the last frame to the current one (Read Only).
-|unscaledTime|    The timeScale-independant time for this frame (Read Only). This is the time in seconds since the start of the game.
+|fixedDeltaTime|The interval in seconds at which physics and other fixed frame rate updates (like MonoBehaviour's FixedUpdate) are performed.|
+|fixedTime|   The time the latest FixedUpdate has started (Read Only). This is the time in seconds since the start of the game.|
+|fixedUnscaledDeltaTime|  The timeScale-independent interval in seconds from the last fixed frame to the current one (Read Only).|
+|fixedUnscaledTime|   The TimeScale-independant time the latest FixedUpdate has started (Read Only). This is the time in seconds since the start of the game.|
+|frameCount|  The total number of frames that have passed (Read Only).|
+inFixedTimeStep Returns true if called inside a fixed time step callback (like MonoBehaviour's FixedUpdate), otherwise returns false.|
+|maximumDeltaTime|    The maximum time a frame can take. Physics and other fixed frame rate updates (like MonoBehaviour's FixedUpdate).|
+|maximumParticleDeltaTime|    The maximum time a frame can spend on particle updates. If the frame takes longer than this, then updates are split into multiple smaller updates.|
+|realtimeSinceStartup|    The real time in seconds since the game started (Read Only).|
+|smoothDeltaTime| A smoothed out Time.deltaTime (Read Only).|
+time    The time at the beginning of this frame (Read Only). This is the time in seconds since the start of the game.|
+|timeScale|   The scale at which the time is passing. This can be used for slow motion effects.|
+|timeSinceLevelLoad|  The time this frame has started (Read Only). This is the time in seconds since the last level has been loaded.|
+|unscaledDeltaTime|   The timeScale-independent interval in seconds from the last frame to the current one (Read Only).|
+|unscaledTime|    The timeScale-independant time for this frame (Read Only). This is the time in seconds since the start of the game.|
 
 # References
 - [Unity&C# Time时间相关 - Eam鳄鱼泪](https://www.cnblogs.com/caymanlu/p/6361675.html)
