space and motion

--- a/_posts/2018-03-29-Unity-空间与运动-详解.md
+++ b/_posts/2018-03-29-Unity-空间与运动-详解.md
@@ -29,7 +29,7 @@ this.transform.position += Vector3.left * Time.deltatime;
 
 # Transform - 方法
 - 平移 [Translate](https://docs.unity3d.com/ScriptReference/Transform.Translate.html)   
-方法的使用总共有四种参数，总的来说就是要用Vector3或者xyz指定移动的方向，以及制定平移的相对参考系是什么。  
+用Vector3或者xyz指定移动的方向，以及制定平移的相对参考系是什么。
 ```c
 //向参数translation的方向和距离移动
 public void Translate(Vector3 translation, Space relativeTo = Space.Self);
@@ -63,16 +63,14 @@ void Update() {
 }
 ```
 
-- 旋转 [Rotate](https://docs.unity3d.com/ScriptReference/Vector3.html)  
-
+- 旋转 [Rotate](https://docs.unity3d.com/ScriptReference/Vector3.html)
 ```c
 public void Rotate(Vector3 eulerAngles, Space relativeTo = Space.Self);
 public void Rotate(float xAngle, float yAngle, float zAngle, Space relativeTo = Space.Self);
 public void Rotate(Vector3 axis, float angle, Space relativeTo = Space.Self);
 ```
 
-- 绕转 [RotateAround](https://docs.unity3d.com/ScriptReference/Transform.RotateAround.html)（世界坐标）  
-
+- 绕转 [RotateAround](https://docs.unity3d.com/ScriptReference/Transform.RotateAround.html)（世界坐标）
 ```c
 //Rotates the transform about axis passing through point 
 //in world coordinates by angle degrees.
