space and motion

--- a/_posts/2018-03-29-Unity-空间与运动-简答.md
+++ b/_posts/2018-03-29-Unity-空间与运动-简答.md
@@ -16,25 +16,20 @@ Short answers
 *Hint: 修改Transform属性，使用向量Vector3的方法…）*
 抛物线运动关键在于x方向上是时间的一次函数，y方向上为时间的二次函数。
 ### Method1 transform.positon  
-注意Time.deltaTime为上一帧到当前帧的时间间隔，Time.fixedTime为游戏开始到当前帧的时间间隔。[Time属性详解](https://www.cnblogs.com/caymanlu/p/6361675.html)
+多种方法改变position属性。注意Time.deltaTime为上一帧到当前帧的时间间隔，Time.fixedTime为游戏开始到当前帧的时间间隔。[Time属性详解](https://www.cnblogs.com/caymanlu/p/6361675.html)
 ```c
     void Update () {
-        float time = Time.fixedTime / 10;
-        //x^2 = 2py
-        this.transform.position += Vector3.right * time ; 
-        this.transform.position += Vector3.up * time * time ;
+        //this.transform.position = new Vector3(time, time * time, 0); 
+        this.transform.position += Vector3.right * Time.fixedTime + Vector3.up * Time.fixedTime * Time.fixedTime;
     }
 ```
-### Method2 Vector3
-每一帧都赋予一个新的向量
+### Method2 transform.traslate
 ```c
     void Update () {
-        float time = Time.fixedTime;
-        Debug.Log(time);
-        this.transform.position = new Vector3(time, time * time, 0); 
+        transform.Translate(new Vector3(Time.fixedTime, Time.fixedTime * Time.fixedTime, 0));
     }
 ```
-### Method3
+### Method3 
 ```c
 ```
 ##实现一个完整的太阳系，
