space and system

--- a/_posts/2018-03-29-Unity-空间与运动-简答.md
+++ b/_posts/2018-03-29-Unity-空间与运动-简答.md
@@ -5,7 +5,7 @@ categories:
 - Unity
 ---
 
-Short answers 
+Short answers & Solar system
 
 # Short answers 
 
@@ -32,7 +32,7 @@ Short answers
 ### Method3 
 ```c
 ```
-##实现一个完整的太阳系，
+# 实现一个完整的太阳系，
 *其他星球围绕太阳的转速必须不一样，且不在一个法平面上.*
 
 ```c
@@ -133,4 +133,4 @@ public class Inity : MonoBehaviour {
 
 ![太阳系截图](http://i2.bvimg.com/618639/ee69958b2995aa5e.png)
 
-<iframe width="560" height="315" src="http://v.youku.com/v_show/id_XMzUxMjM2NDI2NA==.html?spm=a2hzp.8244740.0.0" frameborder="0" allowfullscreen></iframe>
+<iframe width="660" height="455" src="http://v.youku.com/v_show/id_XMzUxMjM2NDI2NA==.html?spm=a2hzp.8244740.0.0" frameborder="0" allowfullscreen></iframe>
