--- a/_posts/2019-03-13-系统分析与设计-HW1.md
+++ b/_posts/2019-03-13-系统分析与设计-HW1.md
@@ -5,6 +5,8 @@ categories:
 - 系统分析与设计
 ---
 
+System Analysis Course homework 1 on topic *The essence of software and software engineering science*.
+
 # 系统分析与设计 HW1
 
 ## 简答题
@@ -16,7 +18,8 @@ categories:
   > 1. the application of a systematic, disciplined, quantifiable approach to the development, operation, and maintenance of software, that is, the application of engineering to software;（一个系统化规范化可度量的方法在软件开发、操作和维护上的应用，也就是说，将工程学应用在软件上）
   > 2. the study of approaches as in (1) （对于1中所说的方法的研究）
 
-  
+
+
 
 - 解释导致 software crisis 本质原因、表现，述说克服软件危机的方法
 
@@ -36,7 +39,10 @@ categories:
   >
   > **克服方法**：研究软件生产的客观规律性，建立与系统化软件生产有关的概念、原则、方法、技术和工具，指导和支持软件系统的生产活动，以期达到降低软件生产成本 、改进软件产品质量、提高软件生产率水平的目标。
 
-  
+
+
+
+
 
 - 软件生命周期
 
@@ -83,7 +89,10 @@ categories:
   >
   > 5． **优化管理级**：过程的量化反馈和先进的新思想、新技术促使过程持续不断改进。
 
-  
+
+
+
+
 
 - 用自己语言简述 SWEBok 或 CMMI 
 
