--- a/_posts/2019-03-21-SLAM-数学基础1：三维刚体运动.md
+++ b/_posts/2019-03-21-SLAM-数学基础1：三维刚体运动.md
@@ -2,7 +2,7 @@
 title: SLAM 数学基础1：三维刚体运动
 date: 2019-03-21 14:31:00
 categories:
-- Deep Learning
+- SLAM
 
 ---
 
@@ -248,7 +248,7 @@ categories:
    | 乘法                 |               | 将$q_a$每一项与$q_b$每一项相乘最后相加并整理==公式== | 通过向量的内外积运算形式：==公式== |                                                              |
    | 共轭$q^*$            |               | $ s_a-x_ai-y_aj-z_ak $                               | $ [s_a,-v_a]$                      | $q^*q =qq^*=[s_a^2+v^Tv,0]$                                  |
    | 求逆$q^{-1}$         | $q^*/||q||^2$ |                                                      |                                    | 1. $qq^{-1} = q^{-1}q = 1$   2.  如果q是单位四元数，逆和共轭是是相同；3. 乘积的逆等于逆的乘积（注意下标）
-  $(q_aq_b)^{-1} = q_b^{-1}q_a^{-1}$ |
+    $(q_aq_b)^{-1} = q_b^{-1}q_a^{-1}$ |
    | 模长$q_a$            |               | $\sqrt{s_a^2+x_a^2+y_a^2+z_a^2}$                     |                                    |                                                              |
    | 数乘$kq$             |               |                                                      | $[ks,kv]$                          |                                                              |
    | 点乘$q_a\cdot q_b $  |               | $s_as_b+x_ax_bi+y_ay_bj+z_az_bk$                     |                                    |                                                              |
@@ -283,7 +283,6 @@ categories:
      2+2&2-2&1-2-2
      \end{bmatrix}
      $$
-     
 
    - 旋转矩阵到四元数：
      $$
