--- a/_posts/2019-03-21-SLAM-数学基础1：三维刚体运动.md
+++ b/_posts/2019-03-21-SLAM-数学基础1：三维刚体运动.md
@@ -156,7 +156,7 @@ categories:
      \end{bmatrix}\isin \mathbb{R}^{4\times 4} | r\isin S0(3),T\isin \mathbb{R}^{3})\right \}
      $$
 
-==Eigen==
+
 
 ### 旋转向量和欧拉角
 
@@ -242,72 +242,101 @@ categories:
 
 2. 运算
 
-   | 运算                 |               | 复数表示                                             | 向量表示                           | 相关性质                                                     |
-   | -------------------- | ------------- | ---------------------------------------------------- | ---------------------------------- | ------------------------------------------------------------ |
-   | 加减法  $q_a\pm q_b$ |               |                                                      | $[s_a\pm s_b,v_a\pm v_b]$          |                                                              |
-   | 乘法                 |               | 将$q_a$每一项与$q_b$每一项相乘最后相加并整理==公式== | 通过向量的内外积运算形式：==公式== |                                                              |
-   | 共轭$q^*$            |               | $ s_a-x_ai-y_aj-z_ak $                               | $ [s_a,-v_a]$                      | $q^*q =qq^*=[s_a^2+v^Tv,0]$                                  |
-   | 求逆$q^{-1}$         | $q^*/||q||^2$ |                                                      |                                    | 1. $qq^{-1} = q^{-1}q = 1$   2.  如果q是单位四元数，逆和共轭是是相同；3. 乘积的逆等于逆的乘积（注意下标）
-    $(q_aq_b)^{-1} = q_b^{-1}q_a^{-1}$ |
-   | 模长$q_a$            |               | $\sqrt{s_a^2+x_a^2+y_a^2+z_a^2}$                     |                                    |                                                              |
-   | 数乘$kq$             |               |                                                      | $[ks,kv]$                          |                                                              |
-   | 点乘$q_a\cdot q_b $  |               | $s_as_b+x_ax_bi+y_ay_bj+z_az_bk$                     |                                    |                                                              |
+   1. 加减法  
+
+   $$
+   q_a\pm q_b = [s_a\pm s_b,v_a\pm v_b]
+   $$
+
+   2. 乘法：将$q_a$每一项与$q_b$每一项相乘最后相加并整理==公式==
+
+   ​	通过向量的内外积运算形式：==公式==                                                      
+
+   3. 共轭
+      $$
+      q^* = s_a-x_ai-y_aj-z_ak = [s_a,-v_a]
+      $$
+
+      - 性质
+        $$
+        q^*q =qq^*=[s_a^2+v^Tv,0]
+        $$
+
+   4. 求逆
+      $$
+      q^{-1}= q^* / ||q||^2
+      $$
+
+      - 性质 1：$qq^{-1} = q^{-1}q = 1$
+
+      - 性质2：如果q是单位四元数，逆和共轭是是相同
+
+      - 性质3：乘积的逆等于逆的乘积（注意下标）$(q_aq_b)^{-1} = q_b^{-1}q_a^{-1}
+
+   5. 模长
+      $$
+      |q_a| = \sqrt{s_a^2+x_a^2+y_a^2+z_a^2}
+      $$
+
+   6. 数乘
+      $$
+       kq     = [ks,kv]
+      $$
+
+   7. 点乘
+      $$
+      q_a\cdot q_b=s_as_b+x_ax_bi+y_ay_bj+z_az_bk
+      $$
+      
 
 
 
 3. 四元数表示旋转
 
    1. 用虚四元数表示三维空间点
-      $$
-      p=[0,x,y,z] = [0,v]
-      $$
-      ​	
+   $$
+   p=[0,x,y,z] = [0,v]
+   $$
+   ​	
 
    2. 用四元数表示旋转：
-      $$
-      q=[cos\frac{\theta}{2},nsin\frac{\theta}{2}]
-      $$
+   $$
+   q=[cos\frac{\theta}{2},nsin\frac{\theta}{2}]
+   $$
 
    3. 旋转后的$p'$表示为
+   $$
+   p'=qpq^{-1}
+   $$
+
+   4. 设四元数为$q = q_0+q_1i+q_2j+q_3k$
+
+      - 四元数到旋转矩阵:
       $$
-      p'=qpq^{-1}
+        R = \begin{bmatrix}
+        1-2-2&2+2&2-2\\
+        2-2&1-2-2&2+2\\
+        2+2&2-2&1-2-2
+        \end{bmatrix}
       $$
 
-4. 设四元数为$q = q_0+q_1i+q_2j+q_3k$
-
-   - 四元数到旋转矩阵:
-     $$
-     R = \begin{bmatrix}
-     1-2-2&2+2&2-2\\
-     2-2&1-2-2&2+2\\
-     2+2&2-2&1-2-2
-     \end{bmatrix}
-     $$
-
-   - 旋转矩阵到四元数：
-     $$
-     q_0 = \frac{\sqrt{tr(R)+1}}{2},q_1 = \frac{m_{23} -m_{32}}{4q_0},q_2 = \frac{m_{31}-m_{13}}{4q_0}, q_3 = \frac{m_{12} - m_{21}}{4q_0}
-     $$
+      - 旋转矩阵到四元数：
+      $$
+      q_0 = \frac{\sqrt{tr(R)+1}}{2},q_1 = \frac{m_{23} -m_{32}}{4q_0},q_2 = \frac{m_{31}-m_{13}}{4q_0}, q_3 = \frac{m_{12} - m_{21}}{4q_0}
+      $$
 
 ### 常见变换
 
-| 名称 | 形式                                            | 自由度 | 不变性质             |
+| 名称 | 格式                                            | 自由度 | 不变性质             |
 | ---- | ----------------------------------------------- | ------ | -------------------- |
-| 欧式 | $T_E = \begin{bmatrix}R&t\\
-0^T&v
+| 欧式 | $T_E = \begin{bmatrix}R&t\\ 0^T&v\end{bmatrix}$ | 6      | 长度，夹角，体积     |
+| 相似 | $T_S = \begin{bmatrix}sR&t\\0^T&1\end{bmatrix}$ | 7      | 体积比               |
+| 仿射 | $T_A = \begin{bmatrix}A&t\\0^T&1\end{bmatrix}$  | 12     | 平行性，体积比       |
+| 投影 | $T_P = \begin{bmatrix}A&t\\a^T&v\end{bmatrix}$  | 15     | 接触平面的相交和相切 |
 
-\end{bmatrix}$  | 6      | 长度，夹角，体积     |
-| 相似 | $T_S = \begin{bmatrix}sR&t\\
-0^T&1
-\end{bmatrix}$ | 7      | 体积比               |
-| 仿射 | $T_A = \begin{bmatrix}A&t\\0^T&1
 
-\end{bmatrix}$  | 12     | 平行性，体积比       |
-| 射影 | $T_P = \begin{bmatrix}
-A&t\\
-a^T&v
 
-\end{bmatrix}$  | 15     | 接触平面的相交和相切 |
+### Eigen库
 
-==Eigen几何模块==
+Eigen几何模块
 
