--- a/_posts/2019-03-21-SLAM-数学基础1：三维刚体运动.md
+++ b/_posts/2019-03-21-SLAM-数学基础1：三维刚体运动.md
@@ -3,8 +3,10 @@ title: SLAM 数学基础1：三维刚体运动
 date: 2019-03-21 14:31:00
 categories:
 - SLAM
-
+mathjax: true
 ---
+
+
 
 
 
@@ -123,7 +125,7 @@ categories:
 
    - **旋转矩阵的性质**：行列式为1的正交矩阵（充分必要）*【特殊正交群】*
 
-     $SO(n) = \{R\isin \mathbb{R}^{n\times n}|RR^T = I,det(R) = 1\}$
+     $SO(n) = \{R\isin \mathbb{R}^{n\times n}|RR^T = I,det(R) = 1\}​$
 
    - **旋转加平移**
      $$
