--- a/_posts/2019-03-22-SLAM-数学基础2：李群李代数.md
+++ b/_posts/2019-03-22-SLAM-数学基础2：李群李代数.md
@@ -3,7 +3,7 @@ title: SLAM 数学基础2：李群李代数
 date: 2019-03-22 14:31:00
 categories:
 - SLAM
-
+mathjax: true
 ---
 
 
@@ -12,4 +12,31 @@ categories:
 
 
 
-### 
+除了上一章中三维世界中刚体运动的描述之外，**什么样的相机位姿最符合当前观测数据这样**的问题也是要解决的。一种典型的方法是把它构建成一个优化问题并求接最优的$R$和$t$（旋转矩阵和平移向量），使得误差最小化。同时，由于旋转矩阵是有约束的，通过李群-李代数转换，能够将位姿估计变成无约束的优化问题，简化求解方式。
+
+
+
+### 李群李代数基础
+
+
+
+回顾一下， **特殊正交群**和**特殊欧式群**分别是一下两个东西：
+$$
+SO(3) = \{R\isin \mathbb{R}^{3\times 3}|RR^T = I,det(R) = 1\}
+$$
+
+$$
+SE(3) = \left \{T =\begin{bmatrix}
+R&t\\
+0^T&1
+\end{bmatrix}\isin \mathbb{R}^{4\times 4} | r\isin S0(3),T\isin \mathbb{R}^{3})\right \}
+$$
+
+
+
+**群**（Group）是一种集合加上一种运算的代数结构。令$G$是集合$A$上的群，可以记作$G = (A,\cdot)$，且群要求这个运算满足以下几个条件：
+
+1. 封闭性：
+2. 结合律：
+3. 幺元：
+4. 逆：
