--- a/_posts/2019-03-21-SLAM-数学基础1：三维刚体运动.md
+++ b/_posts/2019-03-21-SLAM-数学基础1：三维刚体运动.md
@@ -124,8 +124,10 @@ mathjax: true
      $$
 
    - **旋转矩阵的性质**：行列式为1的正交矩阵（充分必要）*【特殊正交群】*
-
-     $SO(n) = \{R\isin \mathbb{R}^{n\times n}|RR^T = I,det(R) = 1\}​$
+     $$
+     SO(n) = \{R \isin  \mathbb{R}^{n\times n}|RR^T = I,det(R) = 1\}
+     $$
+     
 
    - **旋转加平移**
      $$
