--- a/_posts/2019-03-22-SLAM-数学基础2：李群李代数.md
+++ b/_posts/2019-03-22-SLAM-数学基础2：李群李代数.md
@@ -12,7 +12,9 @@ mathjax: true
 
 
 
-除了上一章中三维世界中刚体运动的描述之外，**什么样的相机位姿最符合当前观测数据这样**的问题也是要解决的。一种典型的方法是把它构建成一个优化问题并求接最优的$R$和$t$（旋转矩阵和平移向量），使得误差最小化。同时，由于旋转矩阵是有约束的，通过李群-李代数转换，能够将位姿估计变成无约束的优化问题，简化求解方式。
+除了上一章中三维世界中刚体运动的描述之外，**什么样的相机位姿最符合当前观测数据这样**的问题也是要解决的。一种典型的方法是把它构建成一个优化问题并求接最优的$R$和$t​$（旋转矩阵和平移向量），使得误差最小化。同时，由于旋转矩阵是有约束的，通过李群-李代数转换，能够将位姿估计变成无约束的优化问题，简化求解方式。
+
+接下来的数学会广泛涉及离散数学、线性代数和高等数学，如果一天弄不明白，就两天。
 
 
 
@@ -32,11 +34,28 @@ R&t\\
 \end{bmatrix}\isin \mathbb{R}^{4\times 4} | r\isin S0(3),T\isin \mathbb{R}^{3})\right \}
 $$
 
+1. 群
 
+   - **群**（Group）是一种集合加上一种运算的代数结构。令$G$是集合$A$上的群，可以记作$G = (A,\cdot)$，且群要求这个运算满足以下几个条件：
+     1. 封闭性：
+     2. 结合律：
+     3. 幺元：
+     4. 逆：
 
-**群**（Group）是一种集合加上一种运算的代数结构。令$G$是集合$A$上的群，可以记作$G = (A,\cdot)$，且群要求这个运算满足以下几个条件：
+   - **李群**：连续（光滑）的群
 
-1. 封闭性：
-2. 结合律：
-3. 幺元：
-4. 逆：
+2. 李代数的推导
+
+   考虑某个相机的旋转矩阵$R$随着时间连续变化记为$R(t)$且满足
+   $$
+   R(t)R(t)^T = I
+   $$
+   等式两边对时间$t$求导，可得
+   $$
+   \dot{R}(t)R(t)^T + R(t)\dot{R}(t)^T = 0
+   $$
+   整理得
+   $$
+   \dot{R}(t)R(t)^T  =-( R(t)\dot{R}(t)^T )^T
+   $$
+   
