--- a/_posts/2019-03-21-SLAM-数学基础1：三维刚体运动.md
+++ b/_posts/2019-03-21-SLAM-数学基础1：三维刚体运动.md
@@ -3,6 +3,8 @@ title: SLAM 数学基础1：三维刚体运动
 date: 2019-03-21 14:31:00
 categories:
 - SLAM
+tag:
+- notes
 mathjax: true
 ---
 
@@ -127,7 +129,6 @@ mathjax: true
      $$
      SO(n) = \{R \isin  \mathbb{R}^{n\times n}|RR^T = I,det(R) = 1\}
      $$
-     
 
    - **旋转加平移**
      $$
