--- a/_posts/2019-03-22-SLAM-数学基础2-1：李群李代数基础.md
+++ b/_posts/2019-03-22-SLAM-数学基础2-1：李群李代数基础.md
@@ -3,6 +3,8 @@ title: SLAM 数学基础2-1：李群李代数基础
 date: 2019-03-22 14:31:00
 categories:
 - SLAM
+tag:
+- notes
 mathjax: true
 ---
 
@@ -100,13 +102,13 @@ $$
      3. 自反性
      4. 雅克比等价
 
-   - 设$\mathfrak{s}\mathfrak{o}(3)​$是与$SO(3)​$对应的李代数
+   - 设$\mathfrak{s}\mathfrak{o}(3)$是与$SO(3)$对应的李代数
      $$
      \mathfrak{s}\mathfrak{o}(3)=\left\{
      \phi\isin \mathbb{R}^3, \Phi = \phi^{\wedge}\isin\mathbb{R}^{3\times3}
      \}\right.
      $$
-     
+
 
      李括号为
      $$
@@ -116,7 +118,6 @@ $$
      $$
      R = exp(\phi^{\wedge})
      $$
-     
 
    - 设$\mathfrak{s}\mathfrak{e}(3)​$是与$SE(3)​$对应的李代数
      $$
@@ -127,3 +128,4 @@ $$
      [\xi_1,\xi_2]=(\xi_1^{\wedge}\xi_2^{\wedge} - \xi_2^{\wedge}\xi_1^{\wedge})^{\vee}
      $$
      
+
