--- a/_posts/2019-04-01-DM-多元线性模型预测房价.md
+++ b/_posts/2019-04-01-DM-多元线性模型预测房价.md
@@ -35,7 +35,7 @@ $$
 
   ![1.1](C:\Users\Yuki\Desktop\2\1.1.JPG)
 
-  ![Figure_1-1](C:\Users\Yuki\Desktop\2\Figure_1-1.png)
+  ![Figure_1-1](..\pics\Figure_1-1.png)
 
 - 由于第一次运行后可以看到算法在第20000次迭代附近就几乎无变化了。采样间隔过大不能直观地观察预测性能变化。于是将间隔缩小为100，并增加收敛条件（相邻两次迭代中三个参数的增量的平方和小于某个小量$e= 1e-8 $）即停止迭代：可见总体误差快速下降，迭代221755次（满足收敛条件）时只有参数c（bias）与最后结果误差较大，可见之后非常长的计算时间里都是在微调；
 
