--- a/_posts/2019-04-02-ORB-SLAM论文摘要.md
+++ b/_posts/2019-04-02-ORB-SLAM论文摘要.md
@@ -135,3 +135,15 @@ src: [ORB-SLAM: a Versatile and Accurate Monocular SLAM System](https://ieeexplo
         其中$d_{cr}^2$$d_{rc}^2$分别为从一帧到另外一帧的对称变换误差；$T_M$为拒绝outliner的阈值，基于95%卡方检验决定（$T_H$ = 5.99, $T_F = 3084$）；$\Gamma$数值上等于$T_H$，则在两个模型inliner区域中，对于相同d的打分会相等。
 
      3. Model Selection：
+
+        - 单应矩阵和基础矩阵各有优缺点；由于重建方法（reconstruction method）能够正确地从一个平面初始化或者它可以检测视差较小的情况并拒绝初始化，应该选择单应矩阵。另一方面，一个具有足够视差的非二维场景仅能用基础矩阵表达，虽然当某些匹配点处在同一平面或者有较小视差的时候，单应矩阵也能够描述它们。
+        - 我们设定一个自适应阈值$R_H$来决定何时应该选择哪一个模型，当$R_H>0.45$时选择单应矩阵，因为此时已经捕捉到了足够的二维或小视差匹配。否则选择基础矩阵。
+
+        $$
+        R_H = \frac{R_H}{S_H+S_F}
+        $$
+
+        ​	
+
+     4. Motion and structure from motion recovery
+
