--- a/_posts/2019-04-02-ORB-SLAM论文摘要.md
+++ b/_posts/2019-04-02-ORB-SLAM论文摘要.md
@@ -116,7 +116,7 @@ src: [ORB-SLAM: a Versatile and Accurate Monocular SLAM System](https://ieeexplo
 
    - 算法步骤
 
-     1. Find initial correspondences：在当前帧$F_c$中提取ORB特征，在参考帧$F_r$中查找匹配$x_c\leftrightarrow x_r$。若匹配数量不足，重置参考帧。
+     1. Find initial correspondences：在当前帧$F_c​$中提取ORB特征，在参考帧$F_r​$中查找匹配$x_c\leftrightarrow x_r​$。若匹配数量不足，重置参考帧。
 
      2. Parallel computation of the two models：在两个平行线程中，使用标准DLT（直接线性变换）和八点法，分布计算单应矩阵$H_{cr}$和基础矩阵$F_{cr}$满足
         $$
@@ -134,15 +134,15 @@ src: [ORB-SLAM: a Versatile and Accurate Monocular SLAM System](https://ieeexplo
         \end{matrix}\right.
         $$
 
-        其中$d_{cr}^2$$d_{rc}^2$分别为从一帧到另外一帧的对称变换误差；$T_M$为拒绝outliner的阈值，基于95%卡方检验决定（$T_H$ = 5.99, $T_F = 3084$）；$\Gamma$数值上等于$T_H$，则在两个模型inliner区域中，对于相同d的打分会相等。
+        其中$d_{cr}^2​$$d_{rc}^2​$分别为从一帧到另外一帧的对称变换误差；$T_M​$为拒绝outliner的阈值，基于95%卡方检验决定（$T_H​$ = 5.99, $T_F = 3084​$）；$\Gamma​$数值上等于$T_H​$，则在两个模型inliner区域中，对于相同d的打分会相等。
 
      3. Model Selection：
 
         - 单应矩阵和基础矩阵各有优缺点；由于重建方法（reconstruction method）能够正确地从一个平面初始化或者它可以检测视差较小的情况并拒绝初始化，应该选择单应矩阵。另一方面，一个具有足够视差的非二维场景仅能用基础矩阵表达，虽然当某些匹配点处在同一平面或者有较小视差的时候，单应矩阵也能够描述它们。
-        - 我们设定一个自适应阈值$R_H$来决定何时应该选择哪一个模型，当$R_H>0.45$时选择单应矩阵，因为此时已经捕捉到了足够的二维或小视差匹配。否则选择基础矩阵。
+        - 我们设定一个自适应阈值$R_H$来决定何时应该选择哪一个模型，当$R_H>0.40$时选择单应矩阵，因为此时已经捕捉到了足够的二维或小视差匹配。否则选择基础矩阵。
 
         $$
-        R_H = \frac{R_H}{S_H+S_F}
+        R_H = \frac{S_H}{S_H+S_F}
         $$
 
         ​	
